force-app/main/default/objects/LASERCA__Regulatory_Product__c/LASERCA__Regulatory_Product__c.object-meta.xml
<CustomObject>
    <label>Regulatory Product</label>
    <nameField>
        
        <label>Credit File ID</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Regulatory Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>