force-app/main/default/objects/LASERCA__Regulatory_Product__c/fields/LASERCA__Borrower_ID__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Borrower_ID__c</fullName>
    <label>Borrower ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>