force-app/main/default/objects/LASERCA__Regulatory_Product__c/fields/LASERCA__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Source_Type__c</fullName>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>